General cleaning and fixes
- +Cleaning: final, requireNonNull, InputEvent, static, append
- -Cleaning: SuppressWarnings, throws, globbing
- Rename integration tests suffix
- Fix i18n tooltip on strategies menu
- Fix dialects for derby and postgres
- Upgrade dependencies
- Switch is4K preference to false
- Fix groovy UTs missing asserts nor persist